CONTENTs changed on the landing page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             
             <div class="side-col">
                 <div class="card-box" data-bs-toggle="modal" data-bs-target="#originModal">
-                    <h4>The Origin</h4>
+                    <h4>My Origin</h4>
                     <p><strong>The 9-Month Wall:</strong> I arrived in Germany unable to speak a full sentence. That total reset taught me that grit is the foundation of any technical achievement.</p>
                     <small class="text-primary d-block mt-auto pt-3">Read Full Story →</small>
                 </div>
@@ -74,31 +74,31 @@
                     <h4>The Growth Mindset</h4>
                     <p class="highlight-text">"Engineering is the art of balancing the note."</p>
                     <p class="mt-3">I take risks based on the fact that a mistake is an opportunity. Like a guitar riff, a calculated risk makes a moment superior.</p>
-                    <small class="text-primary d-block mt-auto pt-3">Explore the Philosophy →</small>
+                    <small class="text-primary d-block mt-auto pt-3">Explore My Philosophy →</small>
                 </div>
             </div>
 
             <div class="hero-section">
                 <div class="card-box shadow-lg" data-bs-toggle="modal" data-bs-target="#careerModal">
-                    <h2>I am Ahmed Ragab.</h2>
-                    [cite_start]<p class="lead mb-4">For 15+ years, I have navigated the high-stakes V-Model of ADAS and Embedded Software. [cite: 7, 37]</p>
+                    <h2>Ahmed RaGab.</h2>
+                    <p class="lead mb-4">A tech enthusiast, an R&D leader and world citizen</p>
                     <hr style="opacity: 0.2; background-color: #fff;">
-                    <h4>Technical Pillar: The Scaler</h4>
-                    <p>Leading 70+ engineers and 4 SOPs. [cite_start]I build scalable ecosystems, from ensuring ASPICE compliancy to standardizing Rapid Prototyping. [cite: 9, 19, 30]</p>
-                    <small class="text-info d-block mt-auto pt-3">View Technical Deep-Dive →</small>
+                    <h4>Engineering Manager</h4>
+                    <p>Leading R&D engineers, achieving 4 SOPs (and counting), building scalable ecosystems, ensuring ASPICE compliancy, standardizing Rapid Prototyping and recently involving AI in SW development processes</p>
+                    <small class="text-info d-block mt-auto pt-3">View the tech I love →</small>
                 </div>
             </div>
 
             <div class="side-col">
                 <div class="card-box" data-bs-toggle="modal" data-bs-target="#fitnessModal">
-                    <h4>The Coaching Mindset</h4>
-                    [cite_start]<p><strong>Group Dynamics:</strong> My leadership style, honed through 30 years of Handball and professional fitness coaching, ensures teams give 100%. [cite: 57, 58]</p>
-                    <small class="text-primary d-block mt-auto pt-3">Learn about the Handball Rule →</small>
+                    <h4>My Fitness Journey</h4>
+                    <p><strong>Talentless & Relentless:</strong> I learned one thing; either you find an execuse or you find a way</p>
+                    <small class="text-primary d-block mt-auto pt-3">Read More About It →</small>
                 </div>
                 <div class="card-box" data-bs-toggle="modal" data-bs-target="#investmentModal">
-                    <h4>Strategic Investment</h4>
-                    <p><strong>Anticipation Glasses:</strong> Applying the "Investment Triangle" (Time, Risk, Reward) to technical systems. [cite_start]CFA Level 1 mindset. [cite: 61]</p>
-                    <small class="text-primary d-block mt-auto pt-3">View Strategic Framework →</small>
+                    <h4>Finance/Business</h4>
+                    <p><strong>Rich is relative:</strong> Real Estate Investor and Passing CFA Level 1 exam shaped my financial literacy </p>
+                    <small class="text-primary d-block mt-auto pt-3">Read About it Here →</small>
                 </div>
             </div>
         </div>
@@ -112,10 +112,6 @@
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body p-4" id="originBody"></div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
-                    <a href="value.html" class="btn btn-primary" style="background-color: var(--navy-blue);">Visit The Lab</a>
-                </div>
             </div>
         </div>
     </div>
